Fixed: crash on startup in some rare cases where no patch was loaded yet. Thanks to Endy McGufin.
Fixed: maximum string length calculation for non-extended patches did not take the terminating NULL character into account. Thanks to Altazimuth.
Fixed: sprite frame selection up\down button did not work correctly.

Version 1.2.4
-------------
Fixed: invalid sprite names no longer cause a crash when loading\creating a patch, but are ignored instead.
Fixed: changing miscellaneous values would result in a crash. Thanks to antares031, Xyzzy01.
Fixed: errors about setlocale for some users.

Version 1.2.3
-------------
Fixed: no longer allow a state's action to be removed in non-extended patches. Thanks to Mechadon.
Fixed: Boom configurations now properly refer to the red skullcard pickup string key as REDSKULL instead of REDSKUL. Thanks to EarthQuake.
Fixed: a crash on startup if the program settings became empty or corrupted somehow. Default settings will now be loaded if this is the case.
Changed: doubled size of sprite previews in the state editor.
Changed: updated wxPython to 4.0.6.
Changed: updated to Python 3.7.
Changed: enabled high DPI support.
Changed: reduced size of installed files.

Version 1.2.2
-------------
Fixed: a serious issue with saving thing, weapon and ammo names that could cause no names to be saved and the wrong names loaded when opening a second patch. Thanks to Da Werecat.
Changed: detecting if a thing is a projectile is now done by looking for actions in it's used list of states that set the momentum as a non-fixed point value. Currently Chase and VileChase being used will cause a thing to not be considered a projectile and it's speed property to be automatically cast to a non-fixed point value internally and in written patches.

Version 1.2.1
-------------
Added: support the RandomJump action in state previews.
Added: Extended DehackEd configuration with the extra things and empty states from Doom Retro. Crispy Doom also supports these.